@@ -16,15 +16,15 @@
 <p>
   LilyPond est un syst&egrave;me de gravure automatis&eacute;e.  Il met en forme
   la musique admirablement et automatiquement, et la syntaxe de ses
-  fichers est agr&eacute;able.  Il s'agit d'un Logiciel Libre (&lsquo;open source&rsquo;).
+  fichers est agr&eacute;able.  Il s'agit d'un logiciel libre (&lsquo;open source&rsquo;).
 </p>
 
 <ul>
-  <li>Jamais entendu parler de LilyPond ?
+  <li>Jamais entendu parler de LilyPond&nbsp;?
     Lisez l'<a href="../switch/">introduction</a>.
   </li>
 
-  <li>Des questions ? Jetez un oeil &agrave la <a href="features.html">
+  <li>Des questions&nbsp;? Jetez un oeil &agrave la <a href="features.html">
   liste de ses fonctionnalit&eacute;s</a> ou parcourez la <a href="faq.html">FAQ</a>.
   </li>
 
@@ -35,8 +35,8 @@
   </li>
 
   <li>Qui a &eacute;crit LilyPond&nbsp;? Regardez la <a
-    href="@DOC@v2.5/Documentation/topdocs/out-www/AUTHORS.html">liste des auteurs</a>
-    . Les autres contributeurs sont list&eacute;s dans les <a
+    href="@DOC@v2.5/Documentation/topdocs/out-www/AUTHORS.html">liste des auteurs</a>.
+    Les autres contributeurs sont list&eacute;s dans les <a
     href="thanks.html">remerciements</a>.
 
     </li> </ul>
@@ -49,7 +49,7 @@
 
 <img src="@IMAGES@floating.png" align="right" alt="floating">
 
-<h2>Links</h2>
+<h2>Liens</h2>
 
 <p>
   LilyPond fait partie du <a href="http://www.gnu.org/">Projet GNU</a>.
