@@ -43,7 +43,7 @@
     <th class="news">
       Plongez dans ...
       <br>
-      l'&Eacute;tang-aux-Lys (Lily-Pond)
+      la Mare aux N&eacute;nuphars (Lily-Pond)
     </th>
     <th class="news">
       Nos conceptions
